# immortalize

./: .gitignore  EVIDENCE.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
bench/: contention_bench.py  prove_biased_refcount.py
src/immortalize/: __init__.py
tests/: test_immortalize.py
