[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "immortalize"
version = "0.1.0"
description = "Opt shared read-only objects out of reference counting on free-threaded CPython (PEP 683 immortalization as a library)"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "awto", email = "dan@awto.au" }]
keywords = [
    "free-threading",
    "nogil",
    "pep703",
    "pep683",
    "immortal",
    "refcount",
    "contention",
    "parallelism",
    "performance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/awtoau/immortalize"
Repository = "https://github.com/awtoau/immortalize"
Issues = "https://github.com/awtoau/immortalize/issues"
Origin = "https://github.com/awtoau/pluribus"

[tool.hatch.build.targets.wheel]
packages = ["src/immortalize"]

[tool.pytest.ini_options]
testpaths = ["tests"]
